@@ -134,7 +134,6 @@
                             <child>
                               <object class="GtkButton" id="button_twitter_auth">
                                 <property name="label" translatable="yes">_Authorization</property>
-                                <property name="use_action_appearance">False</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -220,7 +219,6 @@
                             <child>
                               <object class="GtkCheckButton" id="checkbutton_sticky">
                                 <property name="label" translatable="yes">Always on _Visible Workspace</property>
-                                <property name="use_action_appearance">False</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -239,7 +237,6 @@
                             <child>
                               <object class="GtkCheckButton" id="checkbutton_autostart">
                                 <property name="label" translatable="yes">_Auto Start</property>
-                                <property name="use_action_appearance">False</property>
                                 <property name="visible">True</property>
                                 <property name="sensitive">False</property>
                                 <property name="can_focus">True</property>
@@ -382,7 +379,6 @@
                                 <child>
                                   <object class="GtkButton" id="button_auth">
                                     <property name="label" translatable="yes">Au_thentication</property>
-                                    <property name="use_action_appearance">False</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -399,7 +395,6 @@
                                 <child>
                                   <object class="GtkButton" id="button_info">
                                     <property name="label">gtk-about</property>
-                                    <property name="use_action_appearance">False</property>
                                     <property name="visible">True</property>
                                     <property name="sensitive">False</property>
                                     <property name="can_focus">True</property>
@@ -499,6 +494,17 @@
                                       <object class="GtkTreeSelection" id="treeview-selection2"/>
                                     </child>
                                     <child>
+                                      <object class="GtkTreeViewColumn" id="treeviewcolumn_gourp">
+                                        <property name="title" translatable="yes">Group</property>
+                                        <child>
+                                          <object class="GtkCellRendererText" id="cellrenderertext3"/>
+                                          <attributes>
+                                            <attribute name="text">0</attribute>
+                                          </attributes>
+                                        </child>
+                                      </object>
+                                    </child>
+                                    <child>
                                       <object class="GtkTreeViewColumn" id="treeviewcolumn_target">
                                         <property name="resizable">True</property>
                                         <property name="sizing">fixed</property>
@@ -513,7 +519,7 @@
                                             <property name="ellipsize">end</property>
                                           </object>
                                           <attributes>
-                                            <attribute name="text">2</attribute>
+                                            <attribute name="text">4</attribute>
                                           </attributes>
                                         </child>
                                       </object>
@@ -533,7 +539,7 @@
                                             <property name="ellipsize">end</property>
                                           </object>
                                           <attributes>
-                                            <attribute name="text">3</attribute>
+                                            <attribute name="text">5</attribute>
                                           </attributes>
                                         </child>
                                       </object>
@@ -556,7 +562,6 @@
                                 <child>
                                   <object class="GtkButton" id="button_feed_new">
                                     <property name="label">gtk-new</property>
-                                    <property name="use_action_appearance">False</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -573,7 +578,6 @@
                                 <child>
                                   <object class="GtkButton" id="button_feed_prefs">
                                     <property name="label">gtk-preferences</property>
-                                    <property name="use_action_appearance">False</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -590,7 +594,6 @@
                                 <child>
                                   <object class="GtkButton" id="button_feed_del">
                                     <property name="label">gtk-delete</property>
-                                    <property name="use_action_appearance">False</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -660,7 +663,6 @@
             <child>
               <object class="GtkButton" id="button_help">
                 <property name="label">gtk-help</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="can_focus">True</property>
@@ -677,7 +679,6 @@
             <child>
               <object class="GtkButton" id="button_close">
                 <property name="label">gtk-close</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
