@@ -1,5 +1,6 @@
 2012-02-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* liststore.pt: Started swich to treestore.
 	* retweet.png: Added a retweet icon.
 
 2012-01-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
